# mcp-cloudwatch

./: README.md  package-lock.json
python/: .gitignore  README.md  pyproject.toml
python/src/mcp_cloudwatch/: __init__.py  __main__.py  client.py  util.py
python/src/mcp_cloudwatch/tools/: alarms.py  logs.py  metrics.py
typescript/: .gitignore  README.md  package.json
typescript/src/: client.ts  index.ts
typescript/src/tools/: alarms.ts  logs.ts  metrics.ts
