[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cloudwatch"
version = "0.1.0"
description = "MCP server for AWS CloudWatch — query metrics, logs, and alarms from Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.35.0",
]

[project.scripts]
mcp-cloudwatch = "mcp_cloudwatch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cloudwatch"]
